crates/picus/tests/ui/no_public_queue.rs
//! Removed queue/drain APIs must not be reachable from the facade.
use picus::UiEventQueue;

fn main() {
    let _ = UiEventQueue::default();
}
